The error in the mail controller has been corrected.

--- a/.env
+++ b/.env
@@ -8,6 +8,8 @@ DB_NAME = 'modelsDb'
 DB_USER = 'root'
 DB_PASSWORD = 'password!23'
 
+FACEBOOK_ID='323955196766781'
+FACEBOOK_SECRET='b62206986c01d93fd04733c4b302a2bc'
 
 MINIO_SERVER='localhost'
 MINIO_PORT='9001'
