--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "jsonwebtoken": "^9.0.1",
     "koa": "^2.14.2",
     "koa-bodyparser": "^4.4.0",
-    "koa-error": "^3.2.0",
     "koa-router": "^12.0.0",
     "minio": "^7.1.1",
     "mysql2": "^3.3.3",
@@ -37,7 +36,8 @@
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
