--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "forum_auth",
+  "name": "auth_microservice",
   "version": "1.0.0",
   "main": "index.ts",
   "scripts": {
-    "start": "npx ts-node index.ts",
-    "prod": "npx ts-node index.ts",
+    "build": "tsc",
+    "prod": "node dist/index.js",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sergio Zhyltsov",
   "license": "ISC",
   "description": "",
   "devDependencies": {
@@ -19,10 +19,12 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa__cors": "^5.0.0",
     "@types/koa__router": "^12.0.4",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/uuid": "^9.0.8",
     "babel-cli": "^6.26.0",
     "nodemon": "^3.1.1",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   },
   "dependencies": {
     "@koa/bodyparser": "^5.1.1",
@@ -33,9 +35,11 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
+    "koa2-swagger-ui": "^5.11.0",
     "mysql2": "^3.9.7",
     "redis": "^4.6.14",
     "sequelize": "^6.37.3",
+    "swagger-jsdoc": "^6.2.8",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
   }
