--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -62,7 +62,11 @@ jobs:
     # or others). This is typically only required for manual builds.
     # - name: Setup runtime (example)
     #   uses: actions/setup-example@v1
-
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v3.9.1
+      with:
+       node-version: 20 # optional
+          
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
@@ -85,10 +89,11 @@ jobs:
     - if: matrix.build-mode == 'manual'
       shell: bash
       run: |
-        npm install
+        npm ci
         npm build
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v3
       with:
         category: "/language:${{matrix.language}}"
+        
