--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
+    "koa-passport": "^6.0.0",
     "koa2-swagger-ui": "^5.11.0",
     "mysql2": "^3.9.7",
     "redis": "^4.6.14",
