--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.24.6",
     "@babel/preset-env": "^7.24.6",
     "@babel/preset-typescript": "^7.24.6",
+    "@types/amqplib": "^0.10.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/koa__cors": "^5.0.0",
@@ -31,6 +32,7 @@
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
     "@types/koa": "^2.15.0",
+    "amqplib": "^0.10.7",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
